# review_sens_ai

./: .env  README.md  pyproject.toml
src/reviewsense_ecom/: main.py
src/reviewsense_ecom/llm/: llm.py
src/reviewsense_ecom/model/: Constants.py  FeatureRatingModel.py  FeatureSentiment.py  PercentageResponseModel.py  Product.py  ProductReview.py  RatingSummary.py  ReviewResponseModel.py  UserMessage.py  product_review_input.py
src/reviewsense_ecom/mongo/: mongo_db_config.py
src/reviewsense_ecom/retriever/: retrieval.py
src/reviewsense_ecom/router/: routes.py
src/reviewsense_ecom/service/: FeatureExtractor.py  FeatureUpdater.py  ReviewRater.py  ReviewService.py
